# git-alias

./: README.md  setup.cfg
examples/: conflicts.alias  fix.alias  please.alias  pr.alias  tracking.alias
git_alias/: git.py  main.py
