[metadata]
name = git_alias
version = attr: git_alias.__version__
description = Tools for managing git aliases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/git-alias/
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:

[options.entry_points]
console_scripts =
    git-alias = git_alias.main:main
